# IA_Generate

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  chatbot_app.py  docker-compose.yml  pyproject.toml  rag_pipeline.py  readme.md  requirements.txt
.github/workflows/: ci-cd.yml  main.yml
